--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.0.0</version> <!-- Assurez-vous d'utiliser une version compatible -->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
